--- a/package.json
+++ b/package.json
@@ -4,16 +4,18 @@
   "description": "Projeto para gerenciar perguntas anônimas.",
   "main": "src/server.js",
   "scripts": {
-    "start": "nodemon ."
+    "start": "nodemon .",
+    "init-db": "node src/db/init.js"
   },
   "keywords": [],
   "author": "Allan Reymond",
   "license": "ISC",
   "dependencies": {
     "ejs": "^3.1.6",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "sqlite": "^4.0.23",
+    "sqlite3": "^5.0.2"
   },
-
   "devDependencies": {
     "nodemon": "^2.0.14"
   }
